Completed Basic Requirements

--- a/css/main.css
+++ b/css/main.css
@@ -2,26 +2,28 @@
    Author's custom styles
    ========================================================================== */
 
-/* Enable these styles if you wish to go into a grid layout.
+/* Enable these styles if you wish to go into a grid layout. */
 ul#images li {
-    width: 120px;
+    width: 250px;
     height: auto;
     display: inline-block;
     position: relative;
     float: left;
+    padding: 25px;
 }
 
 ul#images li img {
     display: inline-block;
     width: 100%;
     height: auto;
+
 }
 
 ul#images li button {
     display: inline-block;
 }
 
---- End of grid layout styles. */
+/* --- End of grid layout styles.  */
 
 ul#images {
     list-style-type: none;
